examples/test/testpolicy13698.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy13698
  namespace: namespace145
spec:
  podSelector:
    matchLabels:
      key49: value28
      key19: value8
      key5: value2
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key22: value37
          key35: value48
          key25: value0
      podSelector:
        matchLabels:
          key39: value23
          key10: value38
